integration with yandex api

--- a/src/Tatar.Api/appsettings.json
+++ b/src/Tatar.Api/appsettings.json
@@ -1,4 +1,7 @@
 ﻿{
+  "YandexApiSettings": {
+    "Key": "trnsl.1.1.20180426T193427Z.4df39ddfcb402a60.5e5687639616974a1b9fdbdc1be923848057152f"
+  },
   "Logging": {
     "IncludeScopes": false,
     "Debug": {
