--- a/src/Tatar.Api/Tatar.Api.csproj
+++ b/src/Tatar.Api/Tatar.Api.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\Tatar.Services\Tatar.Services.csproj" />
+    <ProjectReference Include="..\Tatar.Services\Tatar.Services.csproj" />
   </ItemGroup>
 
 </Project>
